# Dyablo

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  visu_blast_3D_block.pvsm
core/: CMakeLists.txt
core/cmake/: SuperBuild.cmake
core/doc/: CMakeLists.txt
core/doc/mkdocs/: mkdocs.yml.in
core/src/: CMakeLists.txt  Cosmo.h  DyabloSession.hpp  DyabloTimeLoop.h  FieldManager.cpp  FieldManager.h  HydroState.h  RiemannSolvers.h  ScalarSimulationData.h  UserData.h  UserData_fields.h  UserData_particles.h  VarIndex.h  dyablo_main.cpp  enums.h  kokkos_shared.h  morton_utils.h  real_type.h  userdata_utils.h  utils_hydro.h
core/src/amr/: AMR_Remapper.h  AMRmesh.cpp  AMRmesh.h  AMRmesh_hashmap.cpp  AMRmesh_hashmap.h  AMRmesh_hashmap_new.cpp  AMRmesh_hashmap_new.h  AMRmesh_pablo.cpp  AMRmesh_pablo.h  CellIndexRemapper.h  LightOctree.h  LightOctree_base.h  LightOctree_forward.h  LightOctree_hashmap.h  LightOctree_hashmap_precompute.h  LightOctree_pablo.h  LightOctree_storage.h  MapUserData.h  MapUserData_base.h  MapUserData_mean.cpp  UserDataLB.h
core/src/boundary_conditions/: BoundaryConditions.h
core/src/compute_dt/: Compute_dt.h  Compute_dt_base.h  Compute_dt_cosmology.cpp  Compute_dt_generic.cpp  Compute_dt_hydro.cpp  Compute_dt_legacy.cpp  Compute_dt_parabolic.cpp  Compute_dt_particle_velocity.cpp
core/src/cooling/: CoolingUpdate.h  CoolingUpdate_FF.cpp  CoolingUpdate_base.h
core/src/foreach_cell/: AMRBlockForeachCell.h  AMRBlockForeachCell_CellArray.h  AMRBlockForeachCell_group.h  AMRBlockForeachCell_scratch.h  ForeachCell.h  ForeachCell_utils.h
core/src/gravity/: GravitySolver.h  GravitySolver_analytical.tpp  GravitySolver_base.h  GravitySolver_cg.cpp  GravitySolver_cg.h  GravitySolver_constant.cpp  GravitySolver_constant.h  GravitySolver_point_mass.cpp
core/src/hydro/: CopyGhostBlockCellData.h  HydroUpdate.h  HydroUpdate_RK2.cpp  HydroUpdate_RK2.h  HydroUpdate_base.h  HydroUpdate_euler.cpp  HydroUpdate_euler.h  HydroUpdate_generic.cpp  HydroUpdate_generic.h  HydroUpdate_hancock.cpp  HydroUpdate_hancock.h  HydroUpdate_hancock_oneneighbor.cpp  HydroUpdate_legacy.cpp  HydroUpdate_legacy.h  HydroUpdate_muscl_oneneighbor.cpp  HydroUpdate_utils.h
core/src/init/: AnalyticalFormula.h  AnalyticalFormula_tools.h  InitialConditions.h  InitialConditions_KH.cpp  InitialConditions_MHD_blast.cpp  InitialConditions_MHD_rotor.cpp  InitialConditions_RT.cpp  InitialConditions_analytical.h  InitialConditions_base.h  InitialConditions_blast.cpp  InitialConditions_grafic_fields.cpp  InitialConditions_implode.cpp  InitialConditions_kelvin_helmholtz.cpp  InitialConditions_orszag_tang.cpp  InitialConditions_particle_grid.cpp  InitialConditions_rayleigh_taylor.cpp  InitialConditions_restart.cpp  InitialConditions_riemann2d.cpp  InitialConditions_simple_particles.cpp  InitialConditions_sod.cpp  InitialConditions_tiled_restart.cpp
core/src/io/: IOManager.h  (+4 more)
core/test/: CMakeLists.txt
core/unit_test/: CMakeLists.txt  main.cpp  test_Kokkos.cpp  test_restart.cpp
src/: CMakeLists.txt  EulerPablo_version.h.in  dyablo_version.h.in
src/PABLO/: DataLBInterface.hpp  Global.cpp  Global.hpp  Intersection.cpp  Intersection.hpp  LocalTree.cpp  Map.cpp  Map.hpp  Octant.cpp  PabloUniform.cpp  PabloUniform.hpp  ParaTree.cpp  ParaTree.hpp  morton.hpp
src/common/: bitpit_common.hpp
src/muscl/: CMakeLists.txt  ComputeDtHydroFunctor.h  ComputeError.h  ComputeFluxesAndUpdateHydroFunctor.h  ConvertToPrimitivesHydroFunctor.h  HydroBaseFunctor.h  MarkCellsHydroFunctor.h  ReconstructGradientsHydroFunctor.h  SolverHydroMuscl.cpp  SolverHydroMuscl.h  UpdateRSSTHydroFunctor.h  UserDataComm.cpp  UserDataComm.h  UserDataLB.cpp  UserDataLB.h
src/muscl_block/: CMakeLists.txt  ComputeDtHydroFunctor.h  ConvertToPrimitivesGlobalHydroFunctor.h  ConvertToPrimitivesHydroFunctor.h  CopyCornerBlockCellData.h  CopyFaceBlockCellData.h  CopyFaceBlockCellData.h.fix  CopyFaceBlockCellDataHash.h  CopyInnerBlockCellData.h  MarkCellsHydroFunctor.h  MarkOctantsHydroFunctor.h  MusclBlockGodunovUpdateFunctor.h  MusclBlockSharedGodunovUpdateFunctor.h  SolverHydroMusclBlock.cpp  SolverHydroMusclBlock.h  UserDataComm.cpp  UserDataComm.h  UserDataLB.cpp  UserDataLB.h  utils_block.h
src/patchkernel/: bitpit_patchkernel.hpp
src/shared/: AMRMetaData.cpp  AMRMetaData.h  CMakeLists.txt  EulerEquations.h  FieldManager.h  HDF5_IO.cpp  HDF5_IO.h  HydroParams.cpp  HydroParams.h  HydroState.h  Point.h  RiemannSolvers.h  SimpleVTKIO.cpp  SimpleVTKIO.h  SolverBase.cpp  SolverBase.h  bc_utils.h  bitpit_common.h  enums.h  hashmap.h  kokkos_shared.h  morton_utils.h  solver_utils.h  utils.h  utils_hydro.h
src/utils/: CMakeLists.txt
test/amr/: CMakeLists.txt  test_AMRMetaData.cpp  test_CopyGhostBlockCellDataHash.cpp
test/block_data/: CMakeLists.txt  readme.md  test_CopyGhostBlockCellData.cpp  test_CopyGhostBlockCellData_hash_openmp.cpp  test_CopyInnerBlockCellData.cpp  test_MusclBlockGodunovUpdateFunctor.cpp
test/convergence/: CMakeLists.txt  muscl_convergence.cpp
test/io/: CMakeLists.txt  test_hdf5.cpp  test_hdf5_block.cpp  test_io_hdf5.ini  test_io_hdf5_block.ini  test_vtk.cpp
test/kokkos/: CMakeLists.txt  compute_mandelbrot_amr.cpp  test_kokkos_teamvector.cpp  test_unordered_map.cpp
test/pablo/: CMakeLists.txt  PABLO_test0.cpp  PABLO_test1.cpp  PABLO_test2.cpp  mandelbrot.cpp  mandelbrot_kokkos.cpp
test/solver/: CMakeLists.txt  test_blast_2D.ini  test_blast_2D_block.ini  test_blast_3D.ini  test_double_mach_reflection_2D_block.ini  test_four_quadrant_2D.ini  test_four_quadrant_2D_block.ini  test_gresho_vortex_2D.ini  test_gresho_vortex_2D_block.ini  test_gresho_vortex_2D_low_mach.ini  test_implode_2D.ini  test_implode_2D_block.ini  test_implode_3D.ini  test_isentropic_vortex_2D.ini  test_isentropic_vortex_2D_block.ini  test_kelvin_helmholtz_2D.ini  test_kelvin_helmholtz_2D_block.ini  test_rayleigh_taylor_2D_block.ini  test_shu_osher_2D_block.ini  test_sod_2D_block.ini  test_sod_2d.ini  test_solver.cpp
unit_test/: CMakeLists.txt  main.cpp
unit_test/shared/: morton_utils_test.cpp
(+582 files in other folders)
